--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.7",
+    "@mui/x-date-pickers": "^7.22.2",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "prop-types": "^15.8.1",
