--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-responsive": "^10.0.0",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
